# AmericanVotingSystem

./: CMakeLists.txt  Menu.cpp  Menu.h  README.md  main.cpp
cpp/: Citizen.cpp  CitizenMap.cpp  District.cpp  DividedDistrict.cpp  Party.cpp  RegularRound.cpp  Round.cpp  SimpleRound.cpp  UnitedDistrict.cpp
headers/: Citizen.h  CitizenMap.h  District.h  DividedDistrict.h  DynamicArray.h  Party.h  RegularRound.h  Round.h  SimpleRound.h  UnitedDistrict.h  configs.h
tests/test1/: disData.txt  vote.txt
tests/test3/: citizenData.txt  partyData.txt  pmember.txt  vote.txt
tests/test4/1/: citizenData.txt  disData.txt  partyData.txt  pmember.txt  vote.txt
